--- a/config.json
+++ b/config.json
@@ -2,5 +2,12 @@
     "version": "0.05",
     "prompt": "FyleCLI> ",
     "max_history": 100,
-    "search_recursive": false
+    "search_recursive": false,
+    "default_sort": "name",
+    "aliases": {
+        "ls": "dir",
+        "rm": "del",
+        "mv": "rename",
+        "cat": "view"
+    }
 }
