feat: Upgrade Fyle CLI to v0.08 with move and autocomplete

--- a/config.json
+++ b/config.json
@@ -1,9 +1,12 @@
 {
-    "version": "0.05",
+    "version": "0.08",
     "prompt": "FyleCLI> ",
     "max_history": 100,
     "search_recursive": false,
     "default_sort": "name",
+    "min_size": "0",
+    "max_size": null,
+    "autocomplete": true,
     "aliases": {
         "ls": "dir",
         "rm": "del",
