--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.08",
+    "version": "0.09",
     "prompt": "FyleCLI> ",
     "max_history": 100,
     "search_recursive": false,
@@ -7,6 +7,8 @@
     "min_size": "0",
     "max_size": null,
     "autocomplete": true,
+    "log_level": "INFO",
+    "batch_enabled": true,
     "aliases": {
         "ls": "dir",
         "rm": "del",
