--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.10",
+    "version": "0.11",
     "prompt": "FyleCLI> ",
     "max_history": 100,
     "search_recursive": false,
@@ -7,6 +7,7 @@
     "min_size": "0",
     "max_size": null,
     "autocomplete": true,
+    "completion_enabled": true,
     "log_level": "INFO",
     "batch_enabled": true,
     "tags_enabled": true,
